# nnrp-conformance

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  docs.md  feature.md  maintenance.md  release.md
.github/actions/run-conformance/: action.yml
.github/workflows/: ci.yml
crates/nnrp-conformance-fixtures/: Cargo.toml
crates/nnrp-conformance-fixtures/src/: lib.rs  preview2_vectors.rs  semantic_vectors.rs
crates/nnrp-conformance-runner/: Cargo.toml
crates/nnrp-conformance-runner/src/: lib.rs  main.rs
docs/: wire-level-conformance.md
docs/examples/: adapter-case-results.sample.json  adapter-execution-plan.sample.json  api-profile-capabilities.sample.json  api-profile-case-results.sample.json  api-profile-execution-plan.sample.json  api-profile-recipe.sample.json  benchmark-execution-plan.sample.json  benchmark-results.sample.json  wire-conformance-case-results.sample.json  wire-conformance-execution-plan.sample.json  wire-conformance-target.sample.json
docs/todo/: README.md  preview3-bootstrap.md
docs/todo/nnrp-1-preview3/: bootstrap.md
protocol/nnrp-1-preview2/: example-capabilities.json  manifest.json
protocol/nnrp-1-preview3/: example-capabilities.json  manifest.json
protocol/nnrp-1-preview4/: example-capabilities.json  manifest.json
schemas/: adapter-case-results.schema.json  adapter-execution-plan.schema.json  api-profile-capabilities.schema.json  api-profile-case-results.schema.json  api-profile-execution-plan.schema.json  api-profile-recipe.schema.json  api-profile-suite.schema.json  benchmark-execution-plan.schema.json  benchmark-results.schema.json  capability-manifest.schema.json  case-manifest.schema.json  preview2-vector-recipes.schema.json  protocol-manifest.schema.json  report.schema.json  semantic-vector-recipes.schema.json  vector-manifest.schema.json  wire-conformance-case-results.schema.json  wire-conformance-execution-plan.schema.json  wire-conformance-scenario.schema.json  wire-conformance-suite.schema.json  wire-conformance-target.schema.json
scripts/: run_wire_e2e.ps1  validate_public_json.py
wire-conformance/nnrp-1-preview4/: manifest.json
(+37 files in other folders)
