[workspace]
members = [
    "crates/nnrp-conformance-fixtures",
    "crates/nnrp-conformance-runner",
]
resolver = "2"

[workspace.package]
edition = "2024"
repository = "https://github.com/NagareWorks/nnrp-conformance"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.38", features = ["derive"] }
nnrp-conformance = "=1.0.0-preview.4.6"
nnrp-core = "=1.0.0-preview.4.6"
nnrp-runtime = "=1.0.0-preview.4.6"
nnrp-transport-quic = "=1.0.0-preview.4.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
