[package]
name = "nnrp-conformance-runner"
version.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
default-run = "nnrp-conformance-runner"

[dependencies]
anyhow.workspace = true
clap.workspace = true
nnrp-conformance.workspace = true
nnrp-conformance-fixtures = { path = "../nnrp-conformance-fixtures" }
nnrp-core.workspace = true
nnrp-runtime.workspace = true
nnrp-transport-quic.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
